--- a/app/src/main/res/layout/activity_detail_story.xml
+++ b/app/src/main/res/layout/activity_detail_story.xml
@@ -32,7 +32,7 @@
             tools:text="watashi wa watas hi anata wa anata to" />
 
         <ImageView
-            android:id="@+id/imgStory"
+            android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
@@ -51,7 +51,7 @@
             android:textAlignment="textStart"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/imgStory"
+            app:layout_constraintTop_toBottomOf="@id/image"
             android:textColor="@color/black"
             tools:text="Lorem ipsum dolor sit amet, consectetur adipisc hi anata wa anata tohi anata wa anata tohi anata wa anata tohi anata wa anata tohi anata wa anata tohi anata wa anata tohi anata wa anata tohi anata wa anata to"
             tools:ignore="VisualLintLongText" />
