--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
+
+    <color name="black">#000000</color>
+    <color name="black1">#1B1B1B</color>
     <color name="white">#FFFFFFFF</color>
     <color name="biruijo">#3F8794</color>
     <color name="biruijoAccent">#BA3F8794</color>
